--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "a040a8c4",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "28341426",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "a4430c94",
    "metadata": {},
    "outputs": [
@@ -56,40 +56,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "id": "fc2ee25a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "итого 940M\r\n",
+      "drwxrwxr-x 2 hivaze hivaze 4,0K ноя 14 11:48 .\r\n",
+      "drwxrwxr-x 9 hivaze hivaze 4,0K ноя 14 11:14 ..\r\n",
+      "-rw-rw-r-- 1 hivaze hivaze 940M ноя 14 10:55 embeddings.pickle\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -alh ../pickles/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "c7823b11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../pickles/popularities.pickle', 'rb') as f:\n",
+    "with open('/home/hivaze/CODE-W/PyCharm/80-20-MP/data/pickles/popularities.pickle', 'rb') as f:\n",
     "    popularities = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e24a3594",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../pickles/embeddings.pickle', 'rb') as f:\n",
+    "with open('/home/hivaze/CODE-W/PyCharm/80-20-MP/data/pickles/embeddings.pickle', 'rb') as f:\n",
     "    embeddings = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "6e1acce7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../pickles/documents.pickle', 'rb') as f:\n",
+    "with open('/home/hivaze/CODE-W/PyCharm/80-20-MP/data/pickles/documents.pickle', 'rb') as f:\n",
     "    documents = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2eff1951",
    "metadata": {},
    "outputs": [
@@ -113,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "09ce6d44",
    "metadata": {},
    "outputs": [
@@ -145,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "8585e49b",
    "metadata": {},
    "outputs": [],
@@ -155,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "4a52aa75",
    "metadata": {},
    "outputs": [
@@ -163,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 3s, sys: 20.2 s, total: 2min 23s\n",
-      "Wall time: 26.1 s\n"
+      "CPU times: user 2min 31s, sys: 22.5 s, total: 2min 54s\n",
+      "Wall time: 31.7 s\n"
      ]
     },
     {
@@ -1172,7 +1193,7 @@
        " Sentence: \"берет женский осенний\"   [− Tokens: 3]]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "96699b5b",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "e2d8bf43",
    "metadata": {},
    "outputs": [],
@@ -1219,17 +1240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 38,
    "id": "42479b3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'зимние штаны балоневые'"
+       "'средство для белой обуви'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 39,
    "id": "bbe8fee1",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1272,7 @@
        "(320694,)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 40,
    "id": "bb107b73",
    "metadata": {},
    "outputs": [],
@@ -1274,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 41,
    "id": "5654b3d0",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Рейтинг подходящих запросов для: \"зимние штаны балоневые\"\n"
+      "Рейтинг подходящих запросов для: \"средство для белой обуви\"\n"
      ]
     },
     {
@@ -1314,122 +1335,122 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>штаны зимние балоневые утепленные</td>\n",
-       "      <td>0.967899</td>\n",
+       "      <td>крем для обуви белый</td>\n",
+       "      <td>0.970555</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>зимние балоневые штаны женские</td>\n",
-       "      <td>0.965382</td>\n",
+       "      <td>ботильоны белые</td>\n",
+       "      <td>0.953541</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>зимние штаны для девочки балоневые</td>\n",
-       "      <td>0.959173</td>\n",
+       "      <td>белые туфли</td>\n",
+       "      <td>0.950781</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>балоневые штаны для девочки зимние</td>\n",
-       "      <td>0.952406</td>\n",
+       "      <td>белые ботинки на каблуке</td>\n",
+       "      <td>0.941660</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>штаны зимние женские</td>\n",
-       "      <td>0.908197</td>\n",
+       "      <td>белые кроссовки</td>\n",
+       "      <td>0.937855</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>штаны зимние для девочки балоневые</td>\n",
-       "      <td>0.906603</td>\n",
-       "      <td>0.944444</td>\n",
+       "      <td>белые сапоги</td>\n",
+       "      <td>0.936784</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>штаны для девочки зимние балоневые</td>\n",
-       "      <td>0.903178</td>\n",
-       "      <td>0.944444</td>\n",
+       "      <td>кроссовки белые</td>\n",
+       "      <td>0.933742</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>брюки женские зимние на синтепоне</td>\n",
-       "      <td>0.903085</td>\n",
+       "      <td>кроссовки белые женские</td>\n",
+       "      <td>0.931031</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>брюки зимние</td>\n",
-       "      <td>0.900746</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>краска для обуви белая</td>\n",
+       "      <td>0.929586</td>\n",
+       "      <td>0.944444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>штаны женские зимние</td>\n",
-       "      <td>0.898483</td>\n",
+       "      <td>туфли белые женские</td>\n",
+       "      <td>0.928133</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>балоневые женские штаны на флисе</td>\n",
-       "      <td>0.897833</td>\n",
+       "      <td>туфли женские белые</td>\n",
+       "      <td>0.926372</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>зимние штаны женские</td>\n",
-       "      <td>0.894324</td>\n",
+       "      <td>ботильоны женские белые</td>\n",
+       "      <td>0.925762</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>штаны утеплённые зимние женские</td>\n",
-       "      <td>0.892978</td>\n",
+       "      <td>кроссовки женские белые</td>\n",
+       "      <td>0.925645</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>брюки зимние женские</td>\n",
-       "      <td>0.891663</td>\n",
+       "      <td>ботфорты белые</td>\n",
+       "      <td>0.924062</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>вельветовые штаны</td>\n",
-       "      <td>0.890764</td>\n",
+       "      <td>белые ботинки женские</td>\n",
+       "      <td>0.923681</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>штаны вельветовые</td>\n",
-       "      <td>0.889790</td>\n",
+       "      <td>кроссовки женские адидас белые</td>\n",
+       "      <td>0.920084</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>штаны зимние мужские</td>\n",
-       "      <td>0.888295</td>\n",
+       "      <td>ботинки женские белые</td>\n",
+       "      <td>0.919189</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>ветрозащитные брюки</td>\n",
-       "      <td>0.887788</td>\n",
+       "      <td>кроссовки белые кожа женские натуральная</td>\n",
+       "      <td>0.918508</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>комплект куртка полукомбинезон</td>\n",
-       "      <td>0.887680</td>\n",
+       "      <td>кроссовки белые натуральная кожа</td>\n",
+       "      <td>0.916413</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>брюки женские зимние на флисе</td>\n",
-       "      <td>0.886702</td>\n",
+       "      <td>белые сапоги женские</td>\n",
+       "      <td>0.914015</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1437,30 +1458,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                               request     score  popularity\n",
-       "0    штаны зимние балоневые утепленные  0.967899    1.000000\n",
-       "1       зимние балоневые штаны женские  0.965382    1.000000\n",
-       "2   зимние штаны для девочки балоневые  0.959173    1.000000\n",
-       "3   балоневые штаны для девочки зимние  0.952406    1.000000\n",
-       "4                 штаны зимние женские  0.908197    1.000000\n",
-       "5   штаны зимние для девочки балоневые  0.906603    0.944444\n",
-       "6   штаны для девочки зимние балоневые  0.903178    0.944444\n",
-       "7    брюки женские зимние на синтепоне  0.903085    1.000000\n",
-       "8                         брюки зимние  0.900746    1.000000\n",
-       "9                 штаны женские зимние  0.898483    1.000000\n",
-       "10    балоневые женские штаны на флисе  0.897833    1.000000\n",
-       "11                зимние штаны женские  0.894324    1.000000\n",
-       "12     штаны утеплённые зимние женские  0.892978    1.000000\n",
-       "13                брюки зимние женские  0.891663    1.000000\n",
-       "14                   вельветовые штаны  0.890764    1.000000\n",
-       "15                   штаны вельветовые  0.889790    1.000000\n",
-       "16                штаны зимние мужские  0.888295    1.000000\n",
-       "17                 ветрозащитные брюки  0.887788    1.000000\n",
-       "18      комплект куртка полукомбинезон  0.887680    1.000000\n",
-       "19       брюки женские зимние на флисе  0.886702    1.000000"
+       "                                     request     score  popularity\n",
+       "0                       крем для обуви белый  0.970555    1.000000\n",
+       "1                            ботильоны белые  0.953541    1.000000\n",
+       "2                                белые туфли  0.950781    1.000000\n",
+       "3                   белые ботинки на каблуке  0.941660    1.000000\n",
+       "4                            белые кроссовки  0.937855    1.000000\n",
+       "5                               белые сапоги  0.936784    1.000000\n",
+       "6                            кроссовки белые  0.933742    1.000000\n",
+       "7                    кроссовки белые женские  0.931031    1.000000\n",
+       "8                     краска для обуви белая  0.929586    0.944444\n",
+       "9                        туфли белые женские  0.928133    1.000000\n",
+       "10                       туфли женские белые  0.926372    1.000000\n",
+       "11                   ботильоны женские белые  0.925762    1.000000\n",
+       "12                   кроссовки женские белые  0.925645    1.000000\n",
+       "13                            ботфорты белые  0.924062    1.000000\n",
+       "14                     белые ботинки женские  0.923681    1.000000\n",
+       "15            кроссовки женские адидас белые  0.920084    1.000000\n",
+       "16                     ботинки женские белые  0.919189    1.000000\n",
+       "17  кроссовки белые кожа женские натуральная  0.918508    1.000000\n",
+       "18          кроссовки белые натуральная кожа  0.916413    1.000000\n",
+       "19                      белые сапоги женские  0.914015    1.000000"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
